[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Mountain-platformer-pixel-art-tileset/PNG/Background/bright/Background.png" type="Texture" id=1]
[ext_resource path="res://assets/Mountain-platformer-pixel-art-tileset/PNG/Background/bright/rocks3.png" type="Texture" id=2]
[ext_resource path="res://scripts/main.gd" type="Script" id=3]
[ext_resource path="res://scenes/platform2.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/star.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/platform3.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/tilesets/ground.tres" type="TileSet" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.75, 288.875 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 335.25, 24.625 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.75, 286 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 305.75, 215.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 302.375, 213.75 )

[node name="main" type="Node"]
script = ExtResource( 3 )

[node name="player" parent="." instance=ExtResource( 5 )]
position = Vector2( 41, 49 )
z_index = 2
collision_layer = 4
collision_mask = 0

[node name="background" type="StaticBody2D" parent="."]
z_index = 1
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="ground" type="TileMap" parent="background"]
tile_set = ExtResource( 8 )
format = 1
tile_data = PoolIntArray( 524288, 2, 0, 524289, 7, 0, 524290, 7, 0, 524291, 7, 0, 524292, 7, 0, 524293, 7, 0, 524294, 7, 0, 524295, 7, 0, 524296, 7, 0, 524297, 3, 0, 589824, 10, 0, 589825, 6, 0, 589826, 6, 0, 589827, 6, 0, 589828, 6, 0, 589829, 6, 0, 589830, 6, 0, 589831, 6, 0, 589832, 6, 0, 589833, 16, 0, 655360, 10, 0, 655361, 6, 0, 655362, 6, 0, 655363, 6, 0, 655364, 6, 0, 655365, 6, 0, 655366, 6, 0, 655367, 6, 0, 655368, 6, 0, 655369, 16, 0, 720896, 10, 0, 720897, 6, 0, 720898, 6, 0, 720899, 6, 0, 720900, 6, 0, 720901, 6, 0, 720902, 6, 0, 720903, 6, 0, 720904, 6, 0, 720905, 16, 0, 786432, 10, 0, 786433, 6, 0, 786434, 6, 0, 786435, 6, 0, 786436, 6, 0, 786437, 6, 0, 786438, 6, 0, 786439, 6, 0, 786440, 6, 0, 786441, 16, 0, 851968, 10, 0, 851969, 6, 0, 851970, 6, 0, 851971, 6, 0, 851972, 6, 0, 851973, 6, 0, 851974, 6, 0, 851975, 6, 0, 851976, 6, 0, 851977, 16, 0, 917504, 10, 0, 917505, 6, 0, 917506, 6, 0, 917507, 6, 0, 917508, 6, 0, 917509, 6, 0, 917510, 6, 0, 917511, 6, 0, 917512, 6, 0, 917513, 16, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="colliderleft" type="CollisionShape2D" parent="background"]
position = Vector2( -1.25, 287.875 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="colliderbottom" type="CollisionShape2D" parent="background"]
position = Vector2( 318.75, 550.625 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="colliderTop" type="CollisionShape2D" parent="background"]
position = Vector2( 319, -26 )
shape = SubResource( 2 )

[node name="colliderRight" type="CollisionShape2D" parent="background"]
position = Vector2( 640, 289 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="groundArea" type="Area2D" parent="background"]
__meta__ = {
"_edit_lock_": true
}

[node name="area" type="CollisionShape2D" parent="background/groundArea"]
position = Vector2( 320.25, 742.5 )
shape = SubResource( 4 )

[node name="textureInitTop" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = -1037.0
margin_top = 149.0
margin_right = 2117.0
margin_bottom = 701.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="textureInitBottom" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = -1039.0
margin_top = 212.0
margin_right = 2118.0
margin_bottom = 752.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="textureLoop" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -1028.0
margin_top = -389.0
margin_right = 2117.0
margin_bottom = 151.0
color = Color( 0.392157, 0.352941, 0.411765, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="platform1" parent="." instance=ExtResource( 7 )]
position = Vector2( 92, 364 )
__meta__ = {
"_edit_lock_": true
}

[node name="platform2" parent="." instance=ExtResource( 4 )]
position = Vector2( 275, 309 )
__meta__ = {
"_edit_lock_": true
}

[node name="platform3" parent="." instance=ExtResource( 7 )]
position = Vector2( 164, 213 )
__meta__ = {
"_edit_lock_": true
}

[node name="water" type="StaticBody2D" parent="."]
position = Vector2( 16, 527 )
z_index = 2
collision_layer = 2
collision_mask = 4

[node name="collider" type="CollisionShape2D" parent="water"]
position = Vector2( 302, 216 )
shape = SubResource( 5 )

[node name="baseTexture" type="ColorRect" parent="water"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.180392, 0.32549, 0.501961, 1 )

[node name="star" parent="." instance=ExtResource( 6 )]
position = Vector2( 262, 208 )
z_index = 2

[connection signal="body_entered" from="star" to="." method="_on_star_body_entered"]
